# gemini_reranker

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  environment.yml  mlflow.db  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml
baselines/dataaug_trial_0043/: README.md
baselines/dataaug_trial_0043/data/augmentation/: synonym_bank.tsv
baselines/dataaug_trial_0043/data/groundtruth/: Final_Ground_Truth.json
baselines/dataaug_trial_0043/metrics/: test_metrics.json
baselines/dataaug_trial_0043/model/best/: config.yaml  val_metrics.json
conf/: config.yaml  verification.yaml
conf/candidate_gen/: default.yaml
conf/data/: redsm5_demo.yaml
conf/hardware/: auto.yaml
conf/judge/: gemini.yaml  offline_mock.yaml
conf/mlflow/: local.yaml
conf/model/: deberta_v3_small.yaml
conf/pair_builder/: default.yaml
conf/train/: ranker_fast.yaml  span_fast.yaml
configs/: candidate_gen.yaml  criteria_train.yaml  evidence_train.yaml  infer.yaml  judge.yaml
criteria-bind/: AGENTS.md
data/redsm5/: README.md  redsm5_annotations.csv  redsm5_posts.csv
scripts/: mock_gemini.py  prepare_demo_data.py  prepare_redsm5_data.py  run_verification.sh  verify_build.py
src/criteriabind/: __init__.py  candidate_gen.py  candidate_generation.py  config.py  config_schemas.py  evaluate.py  gemini_judge.py  hydra_utils.py  infer.py  io_utils.py  logging_utils.py  metrics.py  mlflow_utils.py  models.py  pair_builder.py  schemas.py  seed.py  text_utils.py  train_criteria_ranker.py  train_evidence_span.py
src/criteriabind/cli/: __init__.py  candidate_gen.py  evaluate.py  infer.py  judge.py  pair_builder.py
src/criteriabind/data/: __init__.py  collate.py  datasets.py  prepare_redsm5_data.py
src/criteriabind/datasets/: __init__.py  redsm5.py
src/criteriabind/judge/: __init__.py  gemini.py  mock_judge.py
src/criteriabind/models/: __init__.py  ranker.py  span_extractor.py
src/criteriabind/train/: __init__.py  eval.py  optim.py  speed.py  train_criteria_ranker.py  train_evidence_span.py
tests/: test_candidate_gen.py  test_config.py  test_configs.py  test_datasets.py  test_end_to_end.py  test_gemini_judge.py  test_install_import.py  test_io_utils.py  test_judge.py  test_mlflow_local.py  test_models.py  test_offline_e2e_ranker.py  test_offline_e2e_span.py  test_pair_builder.py  test_schemas.py  test_speed_flags.py  test_text_utils.py  test_train_smoke.py
verification/: README.md  VERIFICATION_PLAN.md  report.json  report.md
